# aiko

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
core/: __init__.py  app.py  build.py  config.yml  logger.py  settings.py
core/ai/: agent.py  prompt.py  provider.py  supervisor.py
core/ai/prompts/: aiko-example.json
core/bot/: command.py  handler.py  message.py  utils.py  wrapper.py
core/db/: base.py  init.py  manager.py  schema.py
core/schema/: base.py
core/schema/ai/: __init__.py  fields.py  models.py
core/schema/bot/: __init__.py  fields.py  model.py
core/schema/db/: __init__.py  fields.py
docs/demo/: DEMO.md
linter/: README.md  pyproject.toml
tests/ai/: test_agent.py
